--- a/site/assets/style/index.css
+++ b/site/assets/style/index.css
@@ -29,6 +29,8 @@ body>.sort {
     width: 100%;
     height: 100px;
 
+    margin-top: 100px;
+
     display: flex;
     justify-content: end;
     align-items: center;
@@ -96,7 +98,7 @@ body>.items>.item>.images {
 }
 
 body>.items>.item>.images>img {
-    z-index: 2;
+    z-index: 1;
     width: 100%;
     height: 300px;
     object-fit: cover;
@@ -113,7 +115,7 @@ body>.items>.item>.images>img:nth-child(1):hover + img {
 }
 
 body>.items>.item>.images>.underlay {
-    z-index: 1;
+    z-index: 0;
     width: 100%;
     height: 300px;
     position: absolute;
